# agenticaiorchestrator

./: README.md  extraction_log.txt  pyproject.toml  regulatory_docs_log.txt  trade_data.xml  workflow_result.txt
data/: fpml_data.csv
data/fpml/: treq-TRADEPARTY01-20150721-FR_AMD_CMSXC_1437471445622.xml
db/: chroma.sqlite3
src/agenticaiorchestrator/: requirement.txt  setup.py
src/agenticaiorchestrator/src/: agents.py  crew.py  main.py  tasks.py
src/agenticaiorchestrator/src/config/: agents.yaml  tasks.yaml
src/agenticaiorchestrator/src/tools/: fpml_data_tool.py  regulatory_data_tool.py
